# twirc

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.yml  dd  ddd  migrate  refinery.toml  run
db/: docker-compose.yml  down  migrate  up
db/migrations/: V1__init.sql  init.sql
db/scripts/: library.sql
migrations/: V1__init.sql  V2__user_history.sql
src/: main.rs
src/scripts/: add_message.sql  ban_user.sql  delete_message.sql  library.sql
