[package]
name = "twirc"
version = "0.1.0"
edition = "2021"

[dependencies]
twitch-irc = { version = "4", default-features = false, features = [
    "transport-ws-native-tls",
] }
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "time",
    "signal",
] }
chrono = { version = "0.4", default-features = false }
uuid = { version = "1", default-features = false }
tokio-postgres = { version = "0.7", default-features = false, features = [
    "runtime",
    "with-chrono-0_4",
    "with-uuid-1",
] }
clap = { version = "3", default-features = false, features = ["std", "derive"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_yaml = { version = "0.9", default-features = false }
log = { version = "0.4", default-features = false }
pretty_env_logger = { version = "0.4", default-features = false }
duration-string = "0.1"
